# cnn_hsi

./: .gitmodules  CMakeLists.txt  README.md
example/: pines_labels.txt  pines_train.txt  pines_train_labels.txt
example/salinas/: 1000.txt  1500.txt  500.txt  loss_fn.txt  plot.sh  plot_loss_fn.sh  plot_small.sh  salinas_train.txt  salinas_train2.txt  salinas_train2_labels.txt  salinas_train_labels.txt
src/: cnn_hsi.cpp  layer.hpp  neural_network.hpp  spectral_image.hpp  spectral_train_set.hpp
src/layer/: conv_layer.hpp  fc_layer.hpp  input_layer.hpp  layer.hpp  output_layer.hpp  parameters.hpp  pooling_layer.hpp
src/neural_network/: classifier.hpp  const_init.hpp  neural_network.hpp  random_init.hpp  trainer.hpp
src/util/: const_init.hpp  loss_fn_calculator.hpp  print.hpp  random_init.hpp  timer.hpp
